# Omega-Drive

./: .gitignore  Cargo.toml  PLAN.md  TASKS.md  config.json  project.md  updater.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/crates/backup/: Cargo.toml
src-tauri/crates/backup/src/: lib.rs
src-tauri/crates/book_bridge/: Cargo.toml
src-tauri/crates/book_bridge/src/: bridge.rs  lib.rs  util.rs
src-tauri/crates/book_bridge/src/formats/epub/: html.rs  mod.rs  nav.rs  spine.rs
src-tauri/crates/book_bridge/src/reader/: mod.rs  zip.rs
src-tauri/crates/core/: Cargo.toml
src-tauri/crates/core/src/: config.rs  data.rs  debug_log.rs  error.rs  events.rs  file_types.rs  lib.rs  provider_runtime.rs  scope.rs  services.rs  tenant.rs  tenant_registry.rs  types.rs  ui_events.rs  upload_plan.rs  upload_profile_selection.rs  upload_rules.rs
src-tauri/crates/core/src/ports/: app_context.rs  debug_log.rs  mod.rs  part_store.rs  provider_admin.rs  provider_types.rs  remote_folder.rs  remote_object.rs  storage.rs  stream.rs  ui_events.rs
src-tauri/crates/db/: Cargo.toml
src-tauri/crates/db/src/: backup.rs  backup_repo.rs  cache.rs  db_executor.rs  download_cache.rs  download_jobs.rs  drive_stats_cache.rs  folders.rs  legacy_session_reader.rs  lib.rs  migrations.rs  provider_quota_cache.rs  provider_runtime.rs  repos.rs  services.rs  tenant_meta.rs  upload_cache.rs  upload_jobs.rs  upload_profile_rules.rs  upload_profiles.rs
src-tauri/crates/db/src/files/: media_children.rs  metadata.rs  mod.rs  parts.rs  playback.rs
src-tauri/crates/db/src/registries/: mod.rs  part_store.rs  provider.rs  provider_admin.rs  remote_folder.rs  remote_object.rs  stream.rs
src-tauri/crates/discord/: Cargo.toml
src-tauri/crates/discord/src/: db_ops.rs  discord_auth.rs  discord_real.rs  discord_types.rs  globals.rs  installer.rs  lib.rs
src-tauri/crates/download/: Cargo.toml
src-tauri/crates/download/src/: byte_stream_provider.rs  byte_stream_provider_test.rs  context.rs  lib.rs  manager.rs  partitioned_mem_cache.rs  partitioned_mem_cache_test.rs  parts_cache.rs  progress.rs  provider.rs  run.rs  throttle.rs
src-tauri/crates/drive/: Cargo.toml
src-tauri/crates/drive/src/: commands.rs  context.rs  error.rs  lib.rs  presenters.rs  queries.rs  service.rs
src-tauri/crates/engine/: Cargo.toml
src-tauri/crates/engine/src/: integrity.rs  lib.rs  zip_utils.rs
src-tauri/crates/external_import/: Cargo.toml
src-tauri/crates/external_import/src/: downloader.rs  import_log.rs  lib.rs  service.rs  streaming_importer.rs
src-tauri/crates/extractor/: Cargo.toml
src-tauri/crates/extractor/src/: lib.rs
src-tauri/crates/gateway/: Cargo.toml
src-tauri/crates/gateway/src/: lib.rs
src-tauri/crates/gateway/src/core/: backup.rs  config.rs  data.rs  engine_context.rs  error.rs  error_codes.rs  events.rs  file_types.rs  filemeta.rs  mod.rs  provider_runtime.rs  scope.rs  services.rs  tenant.rs  types.rs
src-tauri/crates/gateway/src/db/: mod.rs
src-tauri/crates/gateway/src/download/: byte_stream_provider.rs  mod.rs
src-tauri/crates/gateway/src/engine/: integrity.rs  mod.rs  zip_utils.rs
src-tauri/crates/gateway/src/player/: cache.rs  mod.rs  singleflight.rs
src-tauri/crates/gateway/src/provider/: app_context.rs  backup_service.rs  debug_logger.rs  discord_backup.rs  download_job_repository.rs  drive_stats_cache_repository.rs  error_reporter.rs  feature_log.rs  file_repository.rs  folder_repository.rs  legacy_session.rs  mod.rs  part_store.rs  provider_admin.rs  provider_types.rs  remote_folder.rs  remote_object.rs  storage.rs  stream.rs  transfer_progress.rs  ui_events.rs  upload_job_repository.rs  upload_orchestrator.rs  upload_profile_repository.rs  upload_service.rs
src-tauri/crates/gateway/src/updater/: path.rs
src-tauri/crates/gateway/src/upload/: mod.rs  upload_context.rs  upload_error.rs  upload_plan.rs  upload_profile_selection.rs  upload_rules.rs  upload_types.rs
src-tauri/crates/player/: Cargo.toml  build.rs
src-tauri/crates/player/src/: bridge.rs  debug.rs  download.rs  hwdec.rs  idx_cache.rs  infrastructure.rs  lib.rs  nativeplayer.rs  playlistbuild.rs  range_stream.rs  runtime.rs  segment_telemetry.rs  segmentgen.rs  singleflight.rs  sparse.rs  stream.rs  url_cache.rs  video_indexer.rs
src-tauri/crates/tauri_app/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/crates/tauri_app/capabilities/: default.json
src-tauri/crates/tauri_app/src/: lib.rs  main.rs
src-tauri/crates/tauri_app/src/api/: events.rs  mod.rs
src-tauri/crates/tauri_app/src/api/handlers/: backup.rs  bootstrap_diagnostics.rs  diagnostics.rs  download.rs  env_actions.rs  extensions.rs  external_import.rs  files.rs  folders.rs  health.rs  logs_diagnostics.rs  mod.rs  onboarding.rs  playback.rs  (+8 more)
src-tauri/crates/tauri_app/src/app/: bootstrap.rs  bridge.rs  event_emitter.rs  mod.rs  paths.rs  tauri_app.rs
src-tauri/crates/tauri_app/src/app_wiring/: app_runtime.rs  mod.rs
src-tauri/crates/tauri_app/src/features/: mod.rs
src-tauri/crates/tauri_app/src/providers/: discord_provider.rs  install.rs  mod.rs  runtime.rs  telegram_provider.rs
src-tauri/crates/tauri_app/tests/: extension_gateway.rs  extension_registry.rs
src-tauri/crates/tauri_app/windows/: hooks.nsh
src-tauri/crates/telegram/: Cargo.toml
src-tauri/crates/telegram/src/: installer.rs  lib.rs  services.rs  telegram_auth.rs  telegram_real.rs  telegram_session.rs
src-tauri/crates/updater/: Cargo.toml
src-tauri/crates/updater/src/: downloader.rs  extractor.rs  lib.rs  manifest.rs  verifier.rs
src-tauri/crates/upload/: Cargo.toml
src-tauri/crates/upload/src/: audio_attach.rs  context.rs  coordinator.rs  derivative_upload.rs  error.rs  index_extractor.rs  lib.rs  metadata.rs  orchestrator.rs  persistence.rs  plan.rs  profiles.rs  progress.rs  provider_dispatch.rs  resolution.rs  rules.rs  session.rs  transfer.rs  types.rs  upload_profile.rs
src-tauri/permissions/: default.toml
src-tauri/resources/player/: main.lua  player_ui.lua
(+173 files in other folders)
