[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/db",
    "crates/discord",
    "crates/gateway",
    "crates/telegram",
    "crates/player",
    "crates/tauri_app",
    "crates/drive",
    "crates/backup",
    "crates/download",
    "crates/external_import",
    "crates/upload",
    "crates/updater",
]

[profile.dev]
opt-level   = 1
debug       = 1
incremental = true
codegen-units = 256
