[package]
name = "omega_drive_backup"
version = "0.1.0"
edition = "2021"

[dependencies]
omega_drive_gateway = { path = "../gateway" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47", features = ["sync", "macros", "fs", "io-util"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
futures-util = "0.3"
zstd = "0.13"
anyhow = "1"

