[package]
name = "omega_drive_book_bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
omega_drive_gateway = { path = "../gateway" }
omega_drive_engine = { path = "../engine", features = ["zip"] }
axum = "0.7"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
zip = { version = "2", features = ["zstd"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
