[package]
name = "omega_drive_core"
version = "0.1.0"
edition = "2021"

[dependencies]
omega_drive_gateway = { path = "../gateway" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.47", features = ["fs", "io-util", "sync", "macros", "rt-multi-thread"] }
tracing = "0.1"
async-trait = "0.1"
bytes = "1"
futures-util = "0.3"
