[package]
name = "omega_drive_db"
version = "0.1.0"
edition = "2021"

[dependencies]
omega_drive_gateway = { path = "../gateway" }
async-trait = "0.1"
rusqlite = { version = "0.32", features = ["bundled", "hooks", "trace"] }
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
zstd = "0.13"
tokio = { version = "1.47", features = ["sync", "rt"] }

[dev-dependencies]
futures-util = "0.3"
anyhow = "1"