[package]
name = "omega_drive_discord"
version = "0.1.0"
edition = "2021"

[dependencies]
omega_drive_gateway = { path = "../gateway" }
serenity = { version = "0.12", default-features = false, features = [
    "client", "gateway", "model", "cache",
    "rustls_backend",
] }
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs"] }
tracing = "0.1"
bytes = "1"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
base64 = "0.22"
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
