[package]
name = "omega_drive_download"
version = "0.1.0"
edition = "2021"

[dependencies]
omega_drive_gateway = { path = "../gateway" }
tokio = { version = "1.47", features = ["sync", "macros", "fs", "io-util", "time", "process", "rt-multi-thread"] }
tokio-util = { version = "0.7", features = ["rt"] }
bytes = "1"
futures-util = "0.3"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["stream"] }
serde_json = "1"
serde = { version = "1.0", features = ["derive"] }
tracing = "0.1"

fs2 = "0.4"
windows-sys = { version = "0.52", features = ["Win32_System_Power"] }


