[package]
name = "omega_drive_external_import"
version = "0.1.0"
edition = "2021"

[dependencies]
omega_drive_gateway = { path = "../gateway" }
tokio = { version = "1.47", features = ["sync", "macros", "fs", "io-util", "time", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
