[package]
name = "omega_drive_extractor"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
kreuzberg = { version = "5.0.0-rc.35", default-features = false, features = [
  "pdf", "office", "email", "html", "xml", "archives",
  "tokio-runtime", "simd-utf8"
] }
