[package]
name = "omega_drive_gateway"
version = "0.1.0"
edition = "2021"

[features]
default = ["zip"]
zip = ["dep:zip"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.47", features = ["fs", "io-util", "sync", "macros", "rt-multi-thread"] }
async-trait = "0.1"
bytes = "1"
blake3 = "1"
futures-util = "0.3"
rusqlite = { version = "0.32", features = [] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
zip = { version = "2", optional = true, default-features = false, features = ["zstd", "aes-crypto"] }

