[package]
name = "omega_drive_player"
version = "0.1.0"
edition = "2021"

[dependencies]
omega_drive_gateway = { path = "../gateway" }
axum = "0.7"
bytes = "1"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
libmpv2 = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs", "process"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
fastrand = "2"
tower-http = { version = "0.6", features = ["cors", "trace"] }
parking_lot = "0.12"
tracing = "0.1"

