[package]
name = "omega_drive_tauri"
version = "0.1.0"
edition = "2021"

[lib]
name       = "omega_drive_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "omega_drive"
path = "src/main.rs"

[dependencies]
omega_drive_core = { path = "../core" }
omega_drive_gateway = { path = "../gateway" }
omega_drive_engine = { path = "../engine", features = ["zip"] }
omega_drive_db = { path = "../db" }
omega_drive_discord = { path = "../discord" }
omega_drive_telegram = { path = "../telegram" }
omega_drive_player = { path = "../player" }
omega_drive_drive = { path = "../drive" }
omega_drive_backup = { path = "../backup" }
omega_drive_download = { path = "../download" }
omega_drive_external_import = { path = "../external_import" }
omega_drive_upload = { path = "../upload" }
omega_drive_updater = { path = "../updater" }

tauri = { version = "2", features = ["tray-icon", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"

tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs", "process", "signal"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = "1.0"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
tokio-util = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
open = "5.3.3"
rxing = { version = "0.6.6", features = ["image"] }
image = { version = "0.25", features = ["png", "jpeg", "webp"] }
rusqlite = { version = "0.32", features = ["bundled", "hooks", "trace"] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-deep-link = "2.4.8"
tauri-plugin-updater = "2"

[build-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-build = { version = "2", features = [] }
toml = "1.0"

[features]
default = ["discord", "telegram", "player"]
discord = []
telegram = []
player = []

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Console", "Win32_System_Power", "Win32_System_Threading", "Win32_System_Diagnostics_ToolHelp", "Win32_UI_HiDpi"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
