[package]
name = "omega_drive_telegram"
version = "0.1.0"
edition = "2021"

[dependencies]
omega_drive_gateway = { path = "../gateway" }
grammers-client = "=0.9.0"
grammers-session = { version = "=0.9.0", default-features = false, features = ["serde"] }
grammers-mtsender = "=0.9.0"
grammers-tl-types = "=0.9.0"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "sync", "time", "net", "io-util", "fs"] }
tracing = "0.1"
bytes = "1"
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
fs2 = "0.4"
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
