[package]
name = "omega_drive_updater"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47", features = ["fs", "io-util"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["stream"] }
blake3 = "1"
zip = "2"
tar = "0.4"
flate2 = "1"
