[package]
name = "omega_drive_upload"
version = "0.1.0"
edition = "2021"

[dependencies]
omega_drive_gateway = { path = "../gateway" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.47", features = ["sync", "macros", "fs", "io-util", "time", "process", "rt-multi-thread"] }
tracing = "0.1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
tokio-util = { version = "0.7", features = ["io", "rt"] }
anyhow = "1"

reqwest = { version = "0.12", features = ["json"] }



